更新dockerfile文件